syntax = "proto3";

option csharp_namespace = "DotnetBarcelona.Actors";

package actorsgrpc;

service Actors {
    rpc GetAll(GetAllActorsRequest) returns (GetAllActorsResponse);
    rpc Get(GetActorRequest) returns (GetActorResponse);
}


message ActorModel {
	int32 id = 1;
	string name = 2;
	string date_of_birth = 3;
}

message GetAllActorsResponse{
    repeated ActorModel actors = 1;
}

message GetAllActorsRequest{ }

message GetActorResponse{
    ActorModel actor = 1;
}

message GetActorRequest{
	int32 id = 1;
}
